refactor: remove properties field from `DataRequest` (#3252)
refactor: remove properties field from DataRequest